# FileTransferUI

./: CMakeLists.txt
interface/: ServerConfigDialog.h  UploadProgressDialog.cpp  main.cpp
net/: client  compile.sh  connClient.cpp
src/: DirectoryConfigDialog.cpp  DirectoryConfigDialog.h  FileExplorerFrame.cpp  FileExplorerFrame.h  MainFrame.cpp  MainFrame.h  ServerConfig.cpp  ServerConfig.h  ServerConfigDialog.cpp  ServerConfigDialog.h  UploadProgressDialog.cpp  UploadProgressDialog.h
src/interface/: DirectoryConfigDialog.cpp  DirectoryConfigDialog.h  FileExplorerFrame.cpp  FileExplorerFrame.h  MainFrame.cpp  MainFrame.h  ServerConfig.cpp  ServerConfig.h  UploadProgressDialog.cpp  UploadProgressDialog.h
src/net/: HwRdma.h  StreamControl.cpp  StreamControl.h
src/net/rdma/: HwRdma.h  StreamControl.h
src/net/service/: ClientInfo.h  LocalConf.cpp  LocalConf.h  main.cpp
src/net/test/: compile.sh
src/service/: client.cpp  server.cpp
src/test/: connServer.cpp  connserver
src/utils/: ClientInfo.h  LocalConf.cpp  LocalConf.h
